CHATS_SIT/force-app/main/default/objects/T_APPLN_INDIV_RACE__c.object
<CustomObject>
    <description>PEAK application individual(s)</description>
   <!-- <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>CDE_ETNCTY__c</fullName>
        <label>Ethnicity Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_RACE__c</fullName>
        <description>CDE_RACE</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Race Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV_RACE__c</fullName>
        <label>IDN_APPLN_INDIV_RACE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Race Information</relationshipLabel>
        <relationshipName>Application_Race_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Race Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARI-{0}</displayFormat>
        <label>Application Race Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Race Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>